--- a/views/rktel/login.ejs
+++ b/views/rktel/login.ejs
@@ -1,12 +1,21 @@
-<center>
-	<div class="my-login-form">
-		<form class="pure-form">
-		    <fieldset class="pure-group">
-		        <input type="text" class="pure-input-1-2" placeholder="Username">
-		        <input type="text" class="pure-input-1-2" placeholder="Password">
-		    
-		    </fieldset>
-		    <button type="submit" class="pure-button pure-input-1-2 pure-button-primary">Sign in</button>
+<h1 class="my-h1">Login</h1>
+<div class="pure-g my-pure-g">
+    <div class="pure-u-1 pure-u-sm-1-3 pure-u-md-1-3"></div>
+    <div class="pure-u-1 pure-u-sm-1-3 pure-u-md-1-3">
+      
+	   	<form class="pure-form my-pure-form" >
+	   		<fieldset class="pure-group">
+		    <input class="pure-input-1" type="text" placeholder="Username">
+		    <input class="pure-input-1" type="password" placeholder="Password">
+		  	</fieldset>	
+			<input class="pure-button pure-button-primary pure-input-1" type="submit" value="Sign in">
 		</form>
+	  
+		
 	</div>
-</center>
+	<div class="pure-u-1 pure-u-sm-1-3 pure-u-md-1-3"></div>	
+</div>
+
+	
+		
+	
