--- a/views/rktel/gis-bar.ejs
+++ b/views/rktel/gis-bar.ejs
@@ -1,7 +1,7 @@
  <div class="custom-wrapper pure-g" id="menu">
     <div class="pure-u-1 pure-u-md-1-3">
         <div class="pure-menu">
-            <a href="#" class="pure-menu-heading custom-brand">NVTL</a>
+            <a href="#" class="pure-menu-heading custom-brand">NVTL-GIS</a>
             <a href="#" class="custom-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
         </div>
     </div>
@@ -9,8 +9,8 @@
         <div class="pure-menu pure-menu-horizontal custom-can-transform">
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="#" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li>
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Contact</a></li>
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Commands</a></li>
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Advantage</a></li>
             </ul>
         </div>
     </div>
@@ -18,7 +18,7 @@
         <div class="pure-menu pure-menu-horizontal custom-menu-3 custom-can-transform">
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="/gis" class="pure-menu-link">Yahoo</a></li>
-                <li class="pure-menu-item"><a href="/login" class="pure-menu-link">Login</a></li>
+                <li class="pure-menu-item"><a href="/" class="pure-menu-link">Logout</a></li>
             </ul>
         </div>
     </div>
